--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+ping3
+pyping
+gpiozero
 Pillow
 pytz
 scrollphathd
@@ -11,3 +14,6 @@ phue
 paho-mqtt
 Astral
 rpi_ws281x
+piglow
+python-piglow
+python3-piglow
